added magpie stuff

--- a/meta-magpie/conf/layer.conf
+++ b/meta-magpie/conf/layer.conf
@@ -1,11 +1,11 @@
-# We have a conf and classes directory, append to BBPATH
-BBPATH .= ":${LAYERDIR}"
+# We have a conf and classes directory, add to BBPATH
+BBPATH := "${LAYERDIR}:${BBPATH}"
 
-# We have a recipes directory, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
+# We have a packages directory, add to BBFILES
+BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "magpie-layer"
-BBFILE_PATTERN_magpie-layer := "^${LAYERDIR}/"
-BBFILE_PRIORITY_magpie-layer = "7"
+BBFILE_COLLECTIONS += "yocto"
+BBFILE_PATTERN_yocto := "^${LAYERDIR}/"
+BBFILE_PRIORITY_yocto = "5"
 
-MAGPIE_BASE := '${@os.path.normpath("${LAYERDIR}/../")}'
