fixed layer name

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,7 +5,7 @@ BBPATH := "${LAYERDIR}:${BBPATH}"
 BBFILES := "${BBFILES} ${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "yocto"
-BBFILE_PATTERN_yocto := "^${LAYERDIR}/"
-BBFILE_PRIORITY_yocto = "5"
+BBFILE_COLLECTIONS += "magpie"
+BBFILE_PATTERN_magpie := "^${LAYERDIR}/"
+BBFILE_PRIORITY_magpie = "5"
 
