fixed default servers

--- a/recipes-support/ntp/files/ntp.conf
+++ b/recipes-support/ntp/files/ntp.conf
@@ -5,10 +5,12 @@ driftfile /etc/ntp.drift
 # This obtains a random server which will be close
 # (in IP terms) to the machine.  Add other servers
 # as required, or change this.
-server time.server.example.com
+server 0.de.pool.ntp.org
+server 1.de.pool.ntp.org
+server 2.de.pool.ntp.org
+server 3.de.pool.ntp.org
+ 
 # Using local hardware clock as fallback
 # Disable this when using ntpd -q -g -x as ntpdate or it will sync to itself
-server 127.127.1.0
-fudge 127.127.1.0 stratum 14
 # Defining a default security setting
 restrict default
