--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,3 +9,10 @@ BBFILE_COLLECTIONS += "magpie"
 BBFILE_PATTERN_magpie := "^${LAYERDIR}/"
 BBFILE_PRIORITY_magpie = "5"
 
+# we want the good jpeg lib, not the ijg stuff
+PREFERRED_PROVIDER_jpeg ?= "libjpeg-turbo"
+
+# ...and the good ffmpeg...
+PREFERRED_PROVIDER_ffmpeg ?= "ffmpeg"
+# to get this we need to...
+LICENSE_FLAGS_WHITELIST ?= "commercial"
